# DeepV

./: .flake8  .gitignore  .pre-commit-config.yaml  AUDIT_README.md  CONTRIBUTING.md  DATASETS_README.md  DATA_SOURCES.md  DEPENDENCIES.md  DEVELOPER.md  DEVELOPMENT.md  DOCS_COMPLETION_SUMMARY.md  FUTURE_ENHANCEMENTS.md  INSTALL.md  PLAN.md  PR_DESCRIPTION.md  QA.md  README.md  REFACTOR.md  SECURITY.md  TODO.md  VECTORIZATION_TRAINING_SETUP.md  __init__.py  audit_progress.json  audit_report.md  audit_tracker.py  batch_audit.py  benchmark_config.json  dataset_downloaders.py  downloaders_test_report.txt  fast_file_list.py  floorplancad_download_report.json  floorplancad_files.txt  mypy.ini  pipeline_unified.py  pyproject.toml  regenerate_splits.py  requirements-dev.txt  requirements-updated.txt  requirements.txt  run_pipeline.py  (+10 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
analysis/: tracing.py
cad/: README.md  export.py
cleaning/: README.md  __init__.py
config/: README.md  config.yaml  local.yaml
dataset/: __init__.py  download_cad_vg_drawing.py  download_datasets.py  download_datasets.sh  precision_floorplan_download.py  preprocess_cad_vg_drawing.py  run_processor.py
docs/: DATA_SOURCES.md  DEVELOPER.md  PLAN.md  QA.md  api_reference.rst  conf.py  examples.rst  getting_started.rst  index.rst
merging/: __init__.py  merging_for_curves.py  merging_for_lines.py
notebooks/: pretrain_model_loading_and_evaluation_for_curves.ipynb
output/: primitives.dxf
profiling_results/: profiling_summary.md
scripts/: README_batch.md  (+48 more)
(+211 files in other folders)
