[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepv"
version = "0.1.0"
description = "Deep Vectorization of Technical Drawings (fork)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["vectorization", "cairo", "pytorch", "floorplans"]

[project.urls]
"Home" = "https://github.com/talentoscope/DeepV"
